// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderInlineEnd renders 0 1`] = `
Array [
  .c0 {
  border-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEnd renders function 1`] = `
Array [
  .c0 {
  border-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  border-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEnd renders negative number 1`] = `
Array [
  .c0 {
  border-inline-end: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEnd renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-inline-end: July;
  }
}

@media April {
  .c0 {
    border-inline-end: August;
  }
}

@media January {
  .c0 {
    border-inline-end: September;
  }
}

@media April {
  .c0 {
    border-inline-end: November;
  }
}

@media June {
  .c0 {
    border-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-inline-end: July;
  }
}

@media April {
  .c0 {
    border-inline-end: August;
  }
}

@media January {
  .c0 {
    border-inline-end: September;
  }
}

@media April {
  .c0 {
    border-inline-end: November;
  }
}

@media June {
  .c0 {
    border-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end: January;
  }
}

@media April {
  .c0 {
    border-inline-end: December;
  }
}

@media January {
  .c0 {
    border-inline-end: April;
  }
}

@media April {
  .c0 {
    border-inline-end: May;
  }
}

@media June {
  .c0 {
    border-inline-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end: January;
  }
}

@media April {
  .c0 {
    border-inline-end: December;
  }
}

@media January {
  .c0 {
    border-inline-end: April;
  }
}

@media April {
  .c0 {
    border-inline-end: May;
  }
}

@media June {
  .c0 {
    border-inline-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEnd renders postitive number 1`] = `
Array [
  .c0 {
  border-inline-end: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEnd renders string 1`] = `
Array [
  .c0 {
  border-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEnd renders valid theme path 1`] = `
Array [
  .c0 {
  border-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
